--- a/settings/DevHome.Settings/Views/AccountsPage.xaml
+++ b/settings/DevHome.Settings/Views/AccountsPage.xaml
@@ -26,7 +26,8 @@
         </DataTemplate>
 
         <DataTemplate x:Key="AccountsViewTemplate" x:DataType="models:Account">
-            <labs:SettingsCard Header="{x:Bind LoginId}" Margin="{StaticResource SettingsCardMargin}">
+            <labs:SettingsCard Header="{x:Bind LoginId}" Margin="{StaticResource SettingsCardMargin}"
+                               CornerRadius="{StaticResource SettingsCardCornerRadius}">
                 <Button Tag="{x:Bind}" x:Uid="Settings_Accounts_LogoutButton" Click="Logout_Click"/>
             </labs:SettingsCard>
         </DataTemplate>
@@ -48,7 +49,7 @@
 
         <ScrollViewer Grid.Row="1" VerticalAlignment="Top">
             <StackPanel>
-                <labs:SettingsCard x:Uid="Settings_Accounts_AddAccount">
+                <labs:SettingsCard x:Uid="Settings_Accounts_AddAccount" CornerRadius="{StaticResource SettingsCardCornerRadius}">
                     <labs:SettingsCard.HeaderIcon>
                         <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xe8fa;"/>
                     </labs:SettingsCard.HeaderIcon>
