--- a/settings/DevHome.Settings/Views/ExtensionsPage.xaml
+++ b/settings/DevHome.Settings/Views/ExtensionsPage.xaml
@@ -33,6 +33,7 @@
                     <DataTemplate x:DataType="settings:ExtensionViewModel">
                         <labs:SettingsCard Header="{x:Bind Header}"
                                            Margin="{ThemeResource SettingsCardMargin}"
+                                           CornerRadius="{StaticResource SettingsCardCornerRadius}"
                                            IsClickEnabled="False" Command="{x:Bind NavigateSettingsCommand}">
                             <ToggleSwitch Visibility="{x:Bind HasToggleSwitch}"
                                           IsOn="{x:Bind IsEnabled, Mode=TwoWay}" />
