--- a/settings/DevHome.Settings/Views/SettingsPage.xaml
+++ b/settings/DevHome.Settings/Views/SettingsPage.xaml
@@ -31,7 +31,7 @@
             <ItemsRepeater ItemsSource="{x:Bind ViewModel.SettingsList, Mode=OneWay}">
                 <ItemsRepeater.ItemTemplate>
                     <DataTemplate x:DataType="settings:SettingViewModel">
-                        <labs:SettingsCard Header="{x:Bind Header}" Description="{x:Bind Description}"
+                        <labs:SettingsCard Header="{x:Bind Header}" Description="{x:Bind Description}" CornerRadius="{StaticResource SettingsCardCornerRadius}"
                                        IsClickEnabled="True" Command="{x:Bind NavigateSettingsCommand}" Margin="{ThemeResource SettingsCardMargin}">
                             <labs:SettingsCard.HeaderIcon>
                                 <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="{x:Bind Glyph}"/>
