--- a/src/Styles/Feedback_ThemeResources.xaml
+++ b/src/Styles/Feedback_ThemeResources.xaml
@@ -14,5 +14,9 @@
     <x:Double x:Key="FeedbackTextBoxHeight">100</x:Double>
 
     <x:Double x:Key="FeedbackExpanderWidth">430</x:Double>
-    
+
+    <CornerRadius x:Key="SettingsCardCornerRadius">8,8,8,8</CornerRadius>
+    <CornerRadius x:Key="SettingsCardTopCornerRadius">8,8,0,0</CornerRadius>
+    <CornerRadius x:Key="SettingsCardBottomCornerRadius">0,0,8,8</CornerRadius>
+
 </ResourceDictionary>
