--- a/settings/DevHome.Settings/Views/AccountsPage.xaml
+++ b/settings/DevHome.Settings/Views/AccountsPage.xaml
@@ -6,7 +6,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewmodels="using:DevHome.Settings.ViewModels"
     xmlns:models="using:DevHome.Settings.Models"
-    xmlns:labs="using:CommunityToolkit.Labs.WinUI"
+    xmlns:ctControls="using:CommunityToolkit.WinUI.Controls"
     xmlns:behaviors="using:DevHome.Common.Behaviors"
     behaviors:NavigationViewHeaderBehavior.HeaderMode="Never"
     mc:Ignorable="d">
@@ -26,10 +26,10 @@
         </DataTemplate>
 
         <DataTemplate x:Key="AccountsViewTemplate" x:DataType="models:Account">
-            <labs:SettingsCard Header="{x:Bind LoginId}" Margin="{StaticResource SettingsCardMargin}"
+            <ctControls:SettingsCard Header="{x:Bind LoginId}" Margin="{StaticResource SettingsCardMargin}"
                                CornerRadius="{StaticResource SettingsCardCornerRadius}">
                 <Button Tag="{x:Bind}" x:Uid="Settings_Accounts_LogoutButton" Click="Logout_Click"/>
-            </labs:SettingsCard>
+            </ctControls:SettingsCard>
         </DataTemplate>
     </Page.Resources>
 
@@ -49,10 +49,10 @@
 
         <ScrollViewer Grid.Row="1" VerticalAlignment="Top">
             <StackPanel>
-                <labs:SettingsCard x:Uid="Settings_Accounts_AddAccount" CornerRadius="{StaticResource SettingsCardCornerRadius}">
-                    <labs:SettingsCard.HeaderIcon>
+                <ctControls:SettingsCard x:Uid="Settings_Accounts_AddAccount" CornerRadius="{StaticResource SettingsCardCornerRadius}">
+                    <ctControls:SettingsCard.HeaderIcon>
                         <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xe8fa;"/>
-                    </labs:SettingsCard.HeaderIcon>
+                    </ctControls:SettingsCard.HeaderIcon>
                     <Button x:Uid="Settings_Accounts_AddAccountButton" HorizontalAlignment="Right" Click="AddAccountButton_Click">
                         <Button.Resources>
                             <Flyout x:Name="AccountsProvidersFlyout" Placement="Bottom">
@@ -70,7 +70,7 @@
                             </Flyout>
                         </Button.Resources>
                     </Button>
-                </labs:SettingsCard>
+                </ctControls:SettingsCard>
                 
                 <ItemsRepeater ItemsSource="{x:Bind ViewModel.AccountsProviders}"
                                ItemTemplate="{StaticResource AccountsProviderViewTemplate}"
