--- a/settings/DevHome.Settings/Views/ExtensionsPage.xaml
+++ b/settings/DevHome.Settings/Views/ExtensionsPage.xaml
@@ -7,7 +7,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:labs="using:CommunityToolkit.Labs.WinUI"
+    xmlns:ctControls="using:CommunityToolkit.WinUI.Controls"
     xmlns:settings="using:DevHome.Settings.ViewModels"
     xmlns:behaviors="using:DevHome.Common.Behaviors"
     behaviors:NavigationViewHeaderBehavior.HeaderMode="Never"
@@ -31,13 +31,13 @@
             <ItemsRepeater ItemsSource="{x:Bind ViewModel.SettingsList, Mode=OneWay}">
                 <ItemsRepeater.ItemTemplate>
                     <DataTemplate x:DataType="settings:ExtensionViewModel">
-                        <labs:SettingsCard Header="{x:Bind Header}"
+                        <ctControls:SettingsCard Header="{x:Bind Header}"
                                            Margin="{ThemeResource SettingsCardMargin}"
                                            CornerRadius="{StaticResource SettingsCardCornerRadius}"
                                            IsClickEnabled="False" Command="{x:Bind NavigateSettingsCommand}">
                             <ToggleSwitch Visibility="{x:Bind HasToggleSwitch}"
                                           IsOn="{x:Bind IsEnabled, Mode=TwoWay}" />
-                        </labs:SettingsCard>
+                        </ctControls:SettingsCard>
                     </DataTemplate>
                 </ItemsRepeater.ItemTemplate>
             </ItemsRepeater>
