--- a/tools/SetupFlow/DevHome.SetupFlow/Views/AppManagementReviewView.xaml
+++ b/tools/SetupFlow/DevHome.SetupFlow/Views/AppManagementReviewView.xaml
@@ -7,7 +7,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ctControls="using:CommunityToolkit.Labs.WinUI"
+    xmlns:ctControls="using:CommunityToolkit.WinUI.Controls"
     xmlns:converters="using:CommunityToolkit.WinUI.UI.Converters"
     xmlns:viewmodels="using:DevHome.SetupFlow.ViewModels"
     mc:Ignorable="d">
